--- a/package.json
+++ b/package.json
@@ -4,68 +4,12 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "build:analyze": "ANALYZE=true next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start",
-    "analyze": "node scripts/analyze-bundle.js",
-    "perf": "npm run build && npm run analyze",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "test:unit": "node scripts/run-tests.js",
-    "test:integration": "node scripts/run-integration-tests.js",
-    "test:e2e": "node scripts/run-e2e-tests.js",
-    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
-    "test:playwright": "npx playwright test",
-    "test:playwright:ui": "npx playwright test --ui",
-    "test:playwright:headed": "npx playwright test --headed",
-    "security:audit": "node scripts/security-audit.js",
-    "security:check": "npm audit && npm run security:audit",
-    "security:fix": "npm audit fix --force",
-    "db:security": "node scripts/database-security-audit.js",
-    "db:audit": "npm run db:security",
-    "rate-limit:test": "node scripts/test-rate-limits.js",
-    "rate-limit:monitor": "node scripts/monitor-rate-limits.js",
-    "monitoring:logs": "node scripts/view-logs.js",
-    "monitoring:performance": "node scripts/performance-analysis.js",
-    "db:optimize": "node scripts/database-optimization.js",
-    "db:cache:clear": "node scripts/clear-database-cache.js",
-    "health:check": "node scripts/health-check.js",
-    "deploy:staging": "vercel --prod --target staging",
-    "deploy:production": "vercel --prod --target production",
-    "docker:build": "docker build -t nmbr-platform .",
-    "docker:run": "docker run -p 3000:3000 nmbr-platform",
-    "docker:compose:up": "docker-compose up -d",
-    "docker:compose:down": "docker-compose down",
-    "staging:setup": "node scripts/setup-staging.js",
-    "staging:validate": "node scripts/validate-staging.js",
-    "staging:reset": "node scripts/reset-staging.js",
-    "staging:db:setup": "node scripts/setup-staging-db.js",
-    "dev:staging": "NODE_ENV=staging next dev -p 3001",
-    "build:staging": "NODE_ENV=staging next build",
-    "start:staging": "NODE_ENV=staging next start -p 3001",
-    "type-check:staging": "NODE_ENV=staging tsc --noEmit --project tsconfig.staging.json",
-    "lint:staging": "NODE_ENV=staging next lint",
-    "test:staging": "NODE_ENV=staging npm run test",
-    "performance:monitor": "node scripts/performance-monitor.js",
-    "performance:alerts": "node scripts/performance-alerts.js",
-    "performance:test": "node scripts/performance-test.js",
-    "performance:report": "node scripts/performance-report.js",
-    "backup:database": "node scripts/backup-automation.js database",
-    "backup:files": "node scripts/backup-automation.js files",
-    "backup:config": "node scripts/backup-automation.js config",
-    "backup:full": "node scripts/backup-automation.js full",
-    "backup:all": "node scripts/backup-automation.js all",
-    "backup:cleanup": "node scripts/backup-automation.js cleanup",
-    "backup:status": "node scripts/backup-status.js",
-    "accessibility:test": "node scripts/accessibility-test.js",
-    "accessibility:audit": "node scripts/accessibility-audit.js",
-    "accessibility:check": "node scripts/accessibility-check.js",
-    "accessibility:report": "node scripts/accessibility-report.js"
+    "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.883.0",
     "@eslint/eslintrc": "latest",
     "@hello-pangea/dnd": "latest",
     "@hookform/resolvers": "^3.10.0",
@@ -110,13 +54,12 @@
     "geist": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "15.2.4",
     "next-themes": "latest",
     "path": "latest",
-    "react": "^18",
+    "react": "^19",
     "react-day-picker": "latest",
-    "react-dom": "^18",
-    "react-dropzone": "latest",
+    "react-dom": "^19",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "recharts": "latest",
@@ -132,23 +75,12 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.9",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.1.3",
-    "jest-environment-jsdom": "^30.1.2",
-    "playwright": "^1.55.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "postcss": "^8.5",
-    "supertest": "^7.1.4",
     "tailwindcss": "^4.1.9",
-    "ts-jest": "^29.4.1",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
